syntax = "proto3";

package profile.v1;

import "google/protobuf/timestamp.proto";
import "third_party/validate/validate.proto";

option go_package = "mandacode.com/accounts/proto/profile/v1;profilev1";

service ProfileService {
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
}

// Profile
message Profile {
  string user_id = 1 [ (validate.rules).string = {uuid : true} ];
  optional string email = 2 [ (validate.rules).string = {min_len : 1} ];
  optional string display_name = 3 [ (validate.rules).string = {min_len : 1} ];
  optional string bio = 4 [ (validate.rules).string = {min_len : 0} ];
  optional string avatar_url = 5 [ (validate.rules).string = {min_len : 0} ];
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

//
// Create profile messages
//
message CreateProfileRequest {
  string user_id = 1 [ (validate.rules).string = {uuid : true} ];
  optional string email = 2 [ (validate.rules).string = {email : true} ];
  optional string display_name = 3 [ (validate.rules).string = {min_len : 1} ];
  optional string bio = 4 [ (validate.rules).string = {min_len : 0} ];
  optional string avatar_url = 5 [ (validate.rules).string = {min_len : 0} ];
}

message CreateProfileResponse { Profile profile = 1; }

//
// Delete profile messages
//
message DeleteProfileRequest {
  string user_id = 1 [ (validate.rules).string = {uuid : true} ];
}
message DeleteProfileResponse {
  string user_id = 1 [ (validate.rules).string = {uuid : true} ];
  google.protobuf.Timestamp deleted_at = 2;
}
